# souschef-streamlit

./: .gitignore  README.md  SOUSCHEF_OUTPUT_SPEC.md  app.py  pyproject.toml  requirements.txt
src/: main.py  trace.json  utils.py  workflow.py
tests/: test_structure.py  test_ui_selenium.py
