[project]
name = "souschef-recipe-transformer"
version = "0.1.0"
description = "Streamlit PoC for recipe transformation"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.31.0",
  "langgraph>=0.2.0",
  "PyPDF2>=3.0.0",
  "python-docx>=1.1.0",
]

[tool.uv]
package = false

[tool.uv.dev-dependencies]
pytest = ">=8.0.0"
selenium = ">=4.20.0"

[tool.uv.sources]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
